feat: add social icons and wave

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout Discord</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
+    <title>Layout Discord</title>
 </head>
 
 
@@ -96,6 +97,8 @@
         </div>
     </section>
 
+     <div class="wave wave-2"></div>
+
     <section id="section-3" class="section">
         <div class="outer-container">
             <img class="feature-img" src="./img/item3 copia.png" alt="">
@@ -110,6 +113,9 @@
             </div>
         </div>
     </section>
+
+    <div class="wave"></div>
+
 
     <section id="section-4" class="section">
         <div id="inner-container-4">
@@ -147,16 +153,16 @@
             <span>Italiano &or;</span>
             <div id="social-icons-container">
                 <ul id="social-icons">
-                    <li>T
+                    <li><i class="fa-brands fa-twitter"></i>
                         <a href=""></a>
                     </li>
-                    <li>I
+                    <li><i class="fa-brands fa-instagram"></i>
                         <a href=""></a>
                     </li>
-                    <li>F
+                    <li><i class="fa-brands fa-facebook"></i>
                         <a href=""></a>
                     </li>
-                    <li>Y
+                    <li><i class="fa-brands fa-youtube"></i>
                         <a href=""></a>
                     </li>
                 </ul>
@@ -195,7 +201,7 @@
         </ul>
 
         <ul class="footer-list">
-            <li class="footer-list-title">Nor</li>
+            <li class="footer-list-title">Norme</li>
             <li>Scarica</li>
             <li>Perchè Discord</li>
             <li>Nitro</li>
