fix: links footer section 2

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -170,43 +170,42 @@
         </div>
 
         <ul class="footer-list">
-            <li class="footer-list-title">Prodotto</li>
-            <li >Scarica</li>
-            <li>Perchè Discord</li>
-            <li>Nitro</li>
-            <li>Sicurezza</li>
-            <li>Assistenza</li>
+            <li><a class="footer-list-title" href="">Prodotto</a></li>
+            <li ><a href="">Scarica</a></li>
+            <li><a href="">Perchè Discord</a></li>
+            <li><a href="">Nitro</a></li>
+            <li><a href="">Sicurezza</a></li>
+            <li><a href="">Assistenza</a></li>
         </ul>
 
         <ul class="footer-list">
-            <li class="footer-list-title">Compagnia</li>
-            <li>Scarica</li>
-            <li>Perchè Discord</li>
-            <li>Nitro</li>
-            <li>Sicurezza</li>
-            <li>Assistenza</li>
+            <li><a class="footer-list-title" href="">Compagnia</a></li>
+            <li ><a href="">Scarica</a></li>
+            <li><a href="">Perchè Discord</a></li>
+            <li><a href="">Nitro</a></li>
+            <li><a href="">Sicurezza</a></li>
+            <li><a href="">Assistenza</a></li>
         </ul>
 
         <ul class="footer-list">
-            <li class="footer-list-title">Risorse</li>
-            <li>Scarica</li>
-            <li>Perchè Discord</li>
-            <li>Nitro</li>
-            <li>Sicurezza</li>
-            <li>Assistenza</li>
-            <li>Perchè Discord</li>
-            <li>Nitro</li>
-            <li>Sicurezza</li>
-            <li>Assistenza</li>
+            <li><a class="footer-list-title" href="">Risorse</a></li>
+            <li ><a href="">Scarica</a></li>
+            <li><a href="">Perchè Discord</a></li>
+            <li><a href="">Nitro</a></li>
+            <li><a href="">Sicurezza</a></li>
+            <li><a href="">Assistenza</a></li>
+            <li ><a href="">Scarica</a></li>
+            <li><a href="">Perchè Discord</a></li>
+            <li><a href="">Perchè Discord</a></li>
         </ul>
 
         <ul class="footer-list">
-            <li class="footer-list-title">Norme</li>
-            <li>Scarica</li>
-            <li>Perchè Discord</li>
-            <li>Nitro</li>
-            <li>Sicurezza</li>
-            <li>Assistenza</li>
+            <li><a class="footer-list-title" href="">Norme</a></li>
+            <li ><a href="">Scarica</a></li>
+            <li><a href="">Perchè Discord</a></li>
+            <li><a href="">Nitro</a></li>
+            <li><a href="">Sicurezza</a></li>
+            <li><a href="">Assistenza</a></li>
         </ul>
 
     </section>
