--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -13,8 +13,8 @@
 
 <!-- header -->
 <header> 
-
-    <img id="logo" src="./img/logo.svg" alt="" class="logo">
+    
+    <a id="logo" href=""></a>
 
     <nav>
         <ul id="menu">
@@ -145,6 +145,8 @@
 
 </main>
 
+
+<!-- footer -->
 <footer>
     <section id="footer-section-1">
         <div id="social-container">
@@ -195,7 +197,7 @@
             <li><a href="">Sicurezza</a></li>
             <li><a href="">Assistenza</a></li>
             <li ><a href="">Scarica</a></li>
-            <li><a href="">Perchè Discord</a></li>
+            <li><a href="">Sicurezza</a></li>
             <li><a href="">Perchè Discord</a></li>
         </ul>
 
@@ -211,7 +213,7 @@
     </section>
 
     <section id="footer-section-2">
-        <img id="footer-logo" src="./img/logo.svg" alt="" class="logo">
+        <a id="footer-logo" href=""></a>
         <a id="footer-login" class="button" href="">Registrati</a>
     </section>
 
